--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.2.2",
     "react": "17.0.2",
     "react-native": "0.65.0",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "2.3.0-alpha.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
