Add mobx support

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-community/slider": "^4.1.8",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
+    "mobx": "^6.3.3",
+    "mobx-react": "^7.2.0",
     "react": "17.0.2",
     "react-native": "0.65.0",
     "react-native-progress": "^5.0.0",
