--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
   "dependencies": {
     "@babel/preset-typescript": "^7.15.0",
     "@react-native-community/slider": "^4.1.8",
+    "@react-navigation/material-top-tabs": "^6.0.4",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
     "mobx": "^6.3.3",
     "mobx-react": "^7.2.0",
     "react": "17.0.2",
     "react-native": "0.65.0",
+    "react-native-dialog": "^9.1.2",
+    "react-native-pager-view": "^5.4.6",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "2.3.0-alpha.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
-    "react-native-svg": "^12.1.1"
+    "react-native-svg": "^12.1.1",
+    "react-native-tab-view": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
